# project

./: .gitignore  ANDROID_BUILD_FIX.md  BUILD_SUCCESS.md  CMakeLists.txt  Dockerfile  INTEGRATION_GUIDE.md  IOS_BUILD_TROUBLESHOOTING.md  IOS_COMPILATION_FIX.md  IOS_CONSOLE_LOGS.md  IOS_LINKER_FIX.md  IOS_LOGGING_GUIDE.md  IOS_TESTING_GUIDE.md  LINKER_ERROR_DIAGNOSIS.md  Main.qml  NotificationApp  NotificationApp.pro  README.md  SETUP_INSTRUCTIONS.md  SOLUTIONS.md  STATIC_MEMBER_FIX.md  TESTING.md  build.sh  build_ios_verbose.sh  check_ios_config.sh  debug_build.pro  docker-build.sh  main.cpp  send_test_notification.sh  test_android_build.sh  test_ios_compilation.sh  test_notification.json  test_notifications.py  verify_ios_fix.sh
android/: AndroidManifest.xml
android/src/com/example/notificationapp/: NotificationHelper.java
ios/: Info.plist  NotificationApp.entitlements
minimal/: main.qml  minimal.pro
src/: androidnotificationhandler.cpp  androidnotificationhandler.h  iosnotificationhandler.cpp  iosnotificationhandler.h  iosnotificationhandler.mm  notificationmanager.cpp  notificationmanager.h
